--- a/results/report.html
+++ b/results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,14393],[],[[5,0,1,6,[],[1,217,1],[]],[7,0,1,8,[],[1,219,1],[]],[9,0,1,10,[],[0,221,14164,11],[]]],[],[3,2,3,2]];
+window.output["suite"] = [1,2,3,4,[],[0,0,12646],[],[[5,0,1,6,[],[1,156,5522],[]],[7,0,1,8,[],[1,5679,1453],[]],[9,0,1,10,[],[1,7137,282],[]],[11,0,1,12,[],[0,7420,5225,13],[]]],[],[4,3,4,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Epsi\\script\\Robot_Framework\\robot\\test\\test.robot","*../test/test.robot","*<p>Test exemple\x3c/p>","*Log Hello World","*<p>Simple test 1\x3c/p>","*Log Goodbye","*<p>Simple test 2\x3c/p>","*Search Domain","*<p>Simple domain name search\x3c/p>","*SessionNotCreatedException: Message: session not created: This version of ChromeDriver only supports Chrome version 88\nCurrent browser version is 87.0.4280.141 with binary path C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe\n"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercice Problem User","*C:\\Epsi\\script\\Robot_Framework\\robot\\tests\\exercice_problem_user.robot","*../tests/exercice_problem_user.robot","*<p>Execices d'introduction\x3c/p>","*Exercice 1","*<p>Test Connexion au site <a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a> avec le problem user\x3c/p>","*Exercice 2","*<p>Test Ajout des marchandises dans le panier\x3c/p>","*Execice 3","*<p>Test Click panier\x3c/p>","*Execice 4","*<p>Test Vérification élements\x3c/p>","*Element 'tag=form' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"Critical Tests","pass":2},{"elapsed":"00:00:14","fail":1,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:14","fail":1,"id":"s1","label":"Test","name":"Test","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":1,"label":"Critical Tests","pass":3},{"elapsed":"00:00:12","fail":1,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:13","fail":1,"id":"s1","label":"Exercice Problem User","name":"Exercice Problem User","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1611000059583;
+window.output["baseMillis"] = 1611175844623;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14402;
+window.output["generated"] = 12653;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
